# Dev_VarCom

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  MyCodeMacros.cmake  MyGlobalImports.cmake  MyLocalImports.cmake  MyPrecompiledHeader.cmake  MySpecial.cmake  README.md
CommonLib/: CMakeLists.txt  cmnPriorities.h  cmnPriorities_linux.cpp  cmnPriorities_win.cpp  procoMsg.cpp  procoMsg.h  procoMsgBase.cpp  procoMsgBase.h  procoMsgHelper.cpp  procoMsgHelper.h  procoTcpSettings.cpp  procoTcpSettings.h  procoUdpSettings.cpp  procoUdpSettings.h  someExampleParms.cpp  someExampleParms.h  someSerialParms.cpp  someSerialParms.h  someState.cpp  someState.h  stdafx.h
ScriptRunner/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  someMonitorThread.cpp  someMonitorThread.h  someScriptRunnerThread.h  someScriptRunnerThread_exec.cpp  someScriptRunnerThread_run_script.cpp  someScriptRunnerThread_rx.cpp  someScriptRunnerThread_test.cpp  someScriptRunnerThread_thread.cpp  stdafx.h
SerialTest3/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  someSerialThread.cpp  someSerialThread.h
Test/: CMakeLists.txt  CmdLineExec.cpp  MainInit.cpp
varcom/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  risSerialStringSR.cpp  risSerialStringSR.h  someSerialSeqThread.h  someSerialSeqThread_class.cpp  someSerialSeqThread_long.cpp  someSerialSeqThread_short.cpp  someSerialThread.cpp  someSerialThread.h  someVarcomSR.cpp  someVarcomSR.h  someVarcomSRThread.cpp  someVarcomSRThread.h  stdafx.h
